--- a/urlbar.css
+++ b/urlbar.css
@@ -1,11 +1,11 @@
 :root {
 	--url-bar-background-color: rgba(0, 0, 0, 0.05);
-	--url-bar-outline-color: #e8883a;
+	--url-bar-outline-color: #98339F;
 }
 
 :root:-moz-lwtheme {
 	--url-bar-background-color: rgba(0, 0, 0, 0.2);
-	--url-bar-outline-color: #e8883a;
+	--url-bar-outline-color: #98339F;
 }
 
 #urlbar-container {
