--- a/userChrome.css
+++ b/userChrome.css
@@ -9,7 +9,7 @@
 /* Common colors */
 /*purple #882c92*/
 :root {
-	--tab-loading-fill: #e8883a !important;
+	--tab-loading-fill: #98339F !important;
 	--hover-color-primary: rgba(0, 0, 0, 0.07);
 	--hover-color-secondary: rgba(0, 0, 0, 0.05);
 	--hover-color-tertiary: rgba(0, 0, 0, 0.2);
@@ -21,7 +21,7 @@
 }
 
 :root:-moz-lwtheme {
-	--tab-loading-fill: #e8883a !important;
+	--tab-loading-fill: #98339F !important;
 	--hover-color-primary: rgba(255, 255, 255, 0.07);
 	--hover-color-secondary: rgba(255, 255, 255, 0.05);
 	--hover-color-tertiary: rgba(255, 255, 255, 0.25);
