--- a/userContent.css
+++ b/userContent.css
@@ -1,7 +1,7 @@
 host,
 :root {
-	--in-content-primary-button-background: #e8883a !important;
-	--tab-loading-fill: #e8883a !important;
+	--in-content-primary-button-background: #98339F !important;
+	--tab-loading-fill: #98339F !important;
 }
 
 body {
