--- a/userChrome.css
+++ b/userChrome.css
@@ -34,7 +34,7 @@
 
 :root {
 
- --tab-min-height: 33px !important; /* adjust to suit your needs */
+ --tab-min-height: 31px !important; /* adjust to suit your needs */
  --tab-min-width:  70px !important; /* adjust to suit your needs */
 	/* Popup window background color */
 	--toolbar-field-focus-background-color: var(
@@ -62,6 +62,8 @@
 #TabsToolbar{
   margin-bottom: 0px !important;
   margin-top: 5px !important;
+  margin-left: 7px;
+  margin-right: 10px;
 }
 #nav-bar:-moz-lwtheme,
 #PersonalToolbar:-moz-lwtheme,
