--- a/userChrome.css
+++ b/userChrome.css
@@ -10,7 +10,7 @@
 /*purple #98339F*/
 /*purple #f47528*/
 :root {
-	--tab-loading-fill: #f47528 !important;
+	--tab-loading-fill: #98339F !important;
 	--hover-color-primary: rgba(0, 0, 0, 0.07);
 	--hover-color-secondary: rgba(0, 0, 0, 0.05);
 	--hover-color-tertiary: rgba(0, 0, 0, 0.2);
@@ -22,7 +22,7 @@
 }
 
 :root:-moz-lwtheme {
-	--tab-loading-fill: #f47528 !important;
+	--tab-loading-fill: #98339F !important;
 	--hover-color-primary: rgba(255, 255, 255, 0.07);
 	--hover-color-secondary: rgba(255, 255, 255, 0.05);
 	--hover-color-tertiary: rgba(255, 255, 255, 0.25);
