--- a/tabbar.css
+++ b/tabbar.css
@@ -1,9 +1,11 @@
 :root {
-	--tab-active-color: rgba(22, 22, 22, 0.12);
+	--tab-active-color: rgba(22, 22, 22, 0.1);
 }
 
-:root:-moz-lwtheme {
-	--tab-active-color: rgba(255, 255, 255, 0.12);
+@media (prefers-color-scheme: dark) {
+	:root {
+		--tab-active-color: rgba(255, 255, 255, 0.1);
+	}
 }
 
 /* Sets tab appearance */
