--- a/urlbar.css
+++ b/urlbar.css
@@ -1,11 +1,13 @@
 :root {
-	--url-bar-background-color: rgba(22, 22, 22, 0.05);
+	--url-border-color: rgba(22, 22, 22, 0.3);
+	--url-bar-background-color: rgba(22, 22, 22, 0);
 	--url-bar-outline-color: #98339F;
 }
 
 @media (prefers-color-scheme: dark) {
 	:root {
-		--url-bar-background-color: rgba(255, 255, 255, 0.05);
+		--url-border-color: rgba(255, 255, 255, 0.3);
+		--url-bar-background-color: rgba(255, 255, 255, 0);
 		--url-bar-outline-color: #98339F;
 	}
 }
@@ -16,12 +18,12 @@
 }
 
 #urlbar {
-	min-height: 28px !important;
+	min-height: 26px !important;
 	font-size: 13px !important;
 }
 
 #urlbar[open] {
-	border-radius: 10px !important;
+	border-radius: 12px !important;
 	box-shadow: 0px 2px 20px rgba(4, 2, 5, 0.2) !important;
 }
 
@@ -50,6 +52,7 @@
 }
 
 #urlbar-background {
+	border-color: var(--url-border-color) !important;
 	border-radius: 6px !important;
 	box-shadow: none !important;
 	outline-offset: -0.5px !important;
