--- a/userChrome.css
+++ b/userChrome.css
@@ -55,6 +55,7 @@
 #PersonalToolbar,
 #titlebar,
 #sidebar-box {
+	opacity: 1 !important;
 	--moz-appearance: -moz-mac-vibrant-titlebar-light !important;
 	background-color: var(--body-background-color) !important;
 }
