- Now use the accent system color - Updated Readme.md and screenshots

--- a/tabbar.css
+++ b/tabbar.css
@@ -21,7 +21,7 @@
 	background-color: var(--tab-active-color) !important;
 }
 #tabbrowser-tabs {
-  --tab-loading-fill: #98339F!important;
+  --tab-loading-fill: AccentColor !important;
 }
 
 .titlebar-spacer[type="pre-tabs"]{
