--- a/userChrome.css
+++ b/userChrome.css
@@ -10,7 +10,7 @@
 /*purple #98339F*/
 /*purple #f47528*/
 :root {
-	--tab-loading-fill: #98339F !important;
+	--tab-loading-fill: AccentColor !important;
 	--hover-color-primary: rgba(0, 0, 0, 0.07);
 	--hover-color-secondary: rgba(0, 0, 0, 0.05);
 	--hover-color-tertiary: rgba(0, 0, 0, 0.2);
