--- a/userChrome.css
+++ b/userChrome.css
@@ -19,13 +19,13 @@
 	--background-color-secondary: rgba(191, 191, 191, 1);
 	--background-color-tertiary: rgba(252, 252, 252, 0.6);
 	--newtab-background-color: rgba(225, 225, 225, 1);
-	--body-background-color: #f3f1f7;
+	--body-background-color: #f1f0f2;
 	--button-primary-bgcolor: AccentColor !important;
 }
 
 @media (prefers-color-scheme: dark) {
 	:root {
-		--body-background-color: #37343c;
+		--body-background-color: #2d2d2f;
 		--background-color-primary: rgba(38, 38, 38, 1);
 		--background-color-secondary: rgba(191, 191, 191, 1);
 		--background-color-tertiary: rgba(252, 252, 252, 0.6);
@@ -35,7 +35,7 @@
 
 :root {
 
-	--tab-min-height: 31px !important;
+	--tab-min-height: 32px !important;
 	/* adjust to suit your needs */
 	--tab-min-width: 66px !important;
 	/* adjust to suit your needs */
@@ -57,15 +57,15 @@
 #titlebar,
 #sidebar-box {
 	opacity: 1 !important;
-	--moz-appearance: -moz-mac-vibrant-titlebar-light !important;
 	background-color: var(--body-background-color) !important;
 }
 
 #TabsToolbar {
-	margin-bottom: 0px !important;
-	margin-top: 3px !important;
-	margin-left: 5px;
-	margin-right: 10px;
+	padding-bottom: 2px !important;
+	padding-top: 2px !important;
+	padding-left: 5px;
+	padding-right: 10px;
+	background-color: var(--body-background-color) !important;
 }
 
 
@@ -85,4 +85,9 @@
 #private-browsing-indicator-with-label>label,
 .titlebar-spacer[type="post-tabs"] {
 	display: none !important;
+}
+
+#nav-bar {
+	padding-top: 2px !important;
+	padding-bottom: 2px !important;
 }
