--- a/urlbar.css
+++ b/urlbar.css
@@ -21,7 +21,7 @@
 #urlbar {
 	min-height: 30px !important;
 	font-size: 13px !important;
-	margin-bottom: 2px!important;
+	margin-bottom: 2px !important;
 }
 
 #urlbar[open] {
@@ -62,7 +62,7 @@
 }
 
 #urlbar *|input::placeholder {
- color: var(--url-placeholder-color) !important;
+	color: var(--url-placeholder-color) !important;
 }
 
 #urlbar:not([open]) #urlbar-background {
@@ -82,7 +82,18 @@
 }
 
 #tracking-protection-icon-container,
-#star-button-box,
 #notification-popup-box {
 	display: none;
+}
+
+#identity-icon-box {
+	margin: 2px !important;
+}
+
+#star-button-box {
+	margin: 2px !important;
+}
+
+#star-button[starred="true"] {
+	fill: AccentColor !important;
 }
