--- a/userChrome.css
+++ b/userChrome.css
@@ -21,6 +21,7 @@
 	--newtab-background-color: rgba(225, 225, 225, 1);
 	--body-background-color: #f1f0f2;
 	--body-background-color-inactive: #e5e4e5;
+	--body-background-color-inactive-2: #e7e6e7;
 	--button-primary-bgcolor: AccentColor !important;
 }
 
@@ -28,6 +29,7 @@
 	:root {
 		--body-background-color: #2d2d2f;
 		--body-background-color-inactive: #252427;
+		--body-background-color-inactive-2: #262526;
 		--background-color-primary: rgba(38, 38, 38, 1);
 		--background-color-secondary: rgba(191, 191, 191, 1);
 		--background-color-tertiary: rgba(252, 252, 252, 0.6);
@@ -70,7 +72,7 @@
 }
 
 #TabsToolbar {
-	opacity: 1 !important;
+	opacity: 1;
 	padding-bottom: 2px !important;
 	padding-top: 2px !important;
 	padding-left: 5px;
@@ -118,21 +120,27 @@
 }
 
 /* When the window is inactive */
-:root:-moz-window-inactive #TabsToolbar,
 :root:-moz-window-inactive #nav-bar,
 :root:-moz-window-inactive #PersonalToolbar,
 :root:-moz-window-inactive #titlebar,
 :root:-moz-window-inactive #sidebar-box {
-	background-color: var(--body-background-color-inactive) !important;
+	background-color: var(--body-background-color-inactive-2) !important;
 	/* Change this color */
 }
 
+:root:-moz-window-inactive #TabsToolbar {
+	background-color: var(--body-background-color-inactive) !important;
+}
+
 /* When the window is active */
-:root:not(:-moz-window-inactive) #TabsToolbar,
 :root:not(:-moz-window-inactive) #nav-bar,
 :root:not(:-moz-window-inactive) #PersonalToolbar,
 :root:not(:-moz-window-inactive) #titlebar,
 :root:not(:-moz-window-inactive) #sidebar-box {
 	background-color: var(--body-background-color) !important;
 	/* Change this color */
+}
+
+:root:not(:-moz-window-inactive) #TabsToolbar {
+	background-color: var(--body-background-color) !important;
 }
