--- a/navbar.css
+++ b/navbar.css
@@ -1,5 +1,6 @@
 #nav-bar {
 	height: 40px !important;
+	border: 0 !important;
 	padding-left: 8px !important;
 	padding-right: 8px !important;
 }
@@ -76,4 +77,16 @@
 	display: block;
 	content: "";
 	width: 38px;
+}
+
+/* FindBar */
+
+findbar {
+	background-color: rgba(255, 255, 255, 0.4) !important;
+}
+
+/* Style the FindBar text input */
+.findbar-textbox {
+	border: 1px solid #922f99 !important;
+	background-color: rgba(255, 255, 255, 0.8) !important;
 }
