--- a/navbar.css
+++ b/navbar.css
@@ -87,6 +87,6 @@ findbar {
 
 /* Style the FindBar text input */
 .findbar-textbox {
-	border: 1px solid #922f99 !important;
+	border: 1px solid var(--accent) !important;
 	background-color: rgba(255, 255, 255, 0.2) !important;
 }
