Remove non-transparent background for navigator toolbox in normal mode; add transition effect for browser background

--- a/userChrome.css
+++ b/userChrome.css
@@ -134,6 +134,7 @@
 }
 
 #browser {
+	transition: background 0.2s ease-in-out;
 	-moz-default-appearance: -moz-window-titlebar;
 	appearance: auto;
 }
