Refactor CSS to consolidate background color settings and remove redundant media queries

--- a/userContent.css
+++ b/userContent.css
@@ -11,6 +11,10 @@ html.private {
 	display: none !important;
 }
 
+body {
+	background-color: white;
+}
+
 body.gm-popup {
 	background-color: #FEFEFE;
 }
@@ -29,19 +33,7 @@ body.gm-popup {
 
 
 @-moz-document url("about:home"), url("about:newtab"), url("about:blank") {
-	@media (prefers-color-scheme: light) {
-
-		html,
-		body {
-			background-color: transparent !important;
-		}
-	}
-
-	@media (prefers-color-scheme: dark) {
-
-		html,
-		body {
-			background-color: transparent !important;
-		}
+	body {
+		background-color: transparent !important;
 	}
 }
