Add transparent background for private HTML body

--- a/userContent.css
+++ b/userContent.css
@@ -7,6 +7,10 @@ html.private {
 	--in-content-page-background: #323233 !important;
 }
 
+html.private>body {
+	background-color: transparent !important;
+}
+
 .search-inner-wrapper {
 	display: none !important;
 }
